--- a/.gitmodules
+++ b/.gitmodules
@@ -9,4 +9,4 @@
 	url = https://github.com/intel/x86-simd-sort
 [submodule "vendored-meson/meson"]
 	path = vendored-meson/meson
-	url = https://github.com/numpy/meson.git
+	url = https://github.com/opencor/meson.git
