--- a/pyproject.toml
+++ b/pyproject.toml
@@ -184,6 +184,9 @@ repair-wheel-command = ""
 [tool.meson-python]
 meson = 'vendored-meson/meson/meson.py'
 
+[tool.meson-python.args]
+setup = ['-Dbuildtype=debug']
+
 [tool.spin]
 package = 'numpy'
 
